--- a/css/style.css
+++ b/css/style.css
@@ -106,11 +106,16 @@ h1, h2, h3, h4, h5, h6 {
 .unordered-list__content {
   font-size: 18px;
   margin-bottom: 10px;
+  padding-left: 20px;
   line-height: 20px;
 }
 
+.unordered-list__content li {
+  padding-left: 20px;
+}
+
 .unordered-list__content li::before {
-  content: '- ';
+  content: url(/img/icons/li.svg) " ";
 }
 
 .ordered-list {
@@ -133,6 +138,28 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .ordered-list__content p::before {
-  content: '- ';
+  content: "- ";
   padding-left: 30px;
+}
+
+.text-italic {
+  font-style: italic;
+}
+
+.text-bold {
+  font-weight: bold;
+}
+
+.subtitle {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  line-height: 30px;
+}
+
+.text {
+  font-size: 20px;
+  margin-bottom: 10px;
+  line-height: 20px;
 }
