--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,5 @@
 @import "nullstyle.scss";
 
-
 .content {
     font-family: "Times New Roman", Times, Baskerville, Georgia, serif;
     font-size: 20px;
@@ -17,33 +16,6 @@
     margin-bottom: 30px;
 }
 .unordered-list {
-
-		/* .list__title */
-
-		&__title {
-            font-size: 24px;
-            line-height: 30px;
-            font-weight: bold;
-            margin-bottom: 10px;
-
-		}
-
-		/* .list__content */
-
-		&__content {
-            font-size: 18px;
-            margin-bottom: 10px;
-            line-height: 20px;
-            & li::before{
-                content: '- ';
-            }
-		} 
-
-        
-}
-
-.ordered-list {
-
     /* .list__title */
 
     &__title {
@@ -51,7 +23,33 @@
         line-height: 30px;
         font-weight: bold;
         margin-bottom: 10px;
+    }
 
+    /* .list__content */
+
+    &__content {
+        font-size: 18px;
+        margin-bottom: 10px;
+        padding-left: 20px;
+
+        line-height: 20px;
+        & li{
+            padding-left: 20px;
+        }
+        & li::before {
+            content: url(/img/icons/li.svg) ' ';
+        }
+    }
+}
+
+.ordered-list {
+    /* .list__title */
+
+    &__title {
+        font-size: 24px;
+        line-height: 30px;
+        font-weight: bold;
+        margin-bottom: 10px;
     }
 
     /* .list__content */
@@ -61,11 +59,30 @@
         margin-bottom: 10px;
         line-height: 20px;
         padding-left: 20px;
-        & p::before{
-            content: '- ';
+        & p::before {
+            content: "- ";
             padding-left: 30px;
-
         }
-       
-    } 
+    }
+}
+
+.text-italic {
+    font-style: italic;
+}
+.text-bold {
+    font-weight: bold;
+}
+
+.subtitle {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    line-height: 30px;
+}
+
+.text {
+    font-size: 20px;
+    margin-bottom: 10px;
+    line-height: 20px;
 }
